--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "bot-toko-wa",
+  "name": "liviaa-astranica-bot",
   "version": "1.0.0",
-  "description": "Bot WhatsApp Store Liviaa Astranica",
+  "description": "WA Bot Toko by Liviaa Astranica",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "dependencies": {
-    "@whiskeysockets/baileys": "github:kiuur/baileys",
-    "qrcode-terminal": "^0.12.0",
-    "moment": "^2.29.4",
-    "fs-extra": "^11.2.0",
-    "axios": "^1.6.0",
-    "uuid": "^9.0.1"
+    "start": "node index.js"
   },
   "engines": {
     "node": ">=20.0.0"
-  }
+  },
+  "dependencies": {
+    "@whisockets/baileys": "^6.7.7",
+    "pino": "^8.20.0",
+    "qrcode-terminal": "^0.12.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "baileys": "^6.7.7"
+  },
+  "keywords": ["whatsapp", "bot", "baileys"],
+  "author": "Liviaa Astranica",
+  "license": "MIT"
 }
